--- a/web/templates/entry_forms/absence.html
+++ b/web/templates/entry_forms/absence.html
@@ -27,7 +27,10 @@
                 </div>
             </div>
         </div>
-        {% include 'components/redact_button.html' %}
+        <div class="entry-header-actions">
+            {% include 'components/redact_button.html' %}
+            {% include 'components/view_pdf_button.html' %}
+        </div>
     </div>
     
     <form method="POST">
