--- a/web/templates/entry_forms/session.html
+++ b/web/templates/entry_forms/session.html
@@ -32,7 +32,10 @@
             </div>
         </div>
         {% set entry = session %}
-        {% include 'components/redact_button.html' %}
+        <div class="entry-header-actions">
+            {% include 'components/redact_button.html' %}
+            {% include 'components/view_pdf_button.html' %}
+        </div>
     </div>
     
     <form method="post">
