Add btn-icon-sm variant (32px) to match Redact button height

--- a/web/static/css/shared.css
+++ b/web/static/css/shared.css
@@ -257,6 +257,16 @@ select, input, textarea, button {
     color: #4B5563;
 }
 
+.btn-icon.btn-icon-sm {
+    width: 32px;
+    height: 32px;
+}
+
+.btn-icon.btn-icon-sm i, .btn-icon.btn-icon-sm svg {
+    width: 16px;
+    height: 16px;
+}
+
 /* ============================================
    FORM ELEMENTS
    ============================================ */
