Invalidate session on password change - redirect to logout instead of settings

--- a/web/templates/change_password.html
+++ b/web/templates/change_password.html
@@ -273,9 +273,9 @@
                 
                 eventSource.close();
                 
-                // Redirect after brief delay
+                // Redirect to logout so session is invalidated and user logs in with new password
                 setTimeout(function() {
-                    window.location.href = '{{ url_for("settings.settings_page") }}';
+                    window.location.href = '{{ url_for("auth.logout") }}';
                 }, 1500);
             }
             else if (data.status === 'complete_with_warnings') {
@@ -293,7 +293,7 @@
                 // Longer delay so user can read the warning
                 setTimeout(function() {
                     alert('Password changed, but the following files failed to re-encrypt and may be inaccessible:\n\n' + data.failed_files.join('\n') + '\n\nYou may need to restore these files from a backup.');
-                    window.location.href = '{{ url_for("settings.settings_page") }}';
+                    window.location.href = '{{ url_for("auth.logout") }}';
                 }, 2000);
             }
             else if (data.status === 'error') {
