--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -88,7 +88,7 @@
             <div class="form-group form-group-wide">
                 <label for="post-backup-command">Post-Backup Command (optional)</label>
                 <input type="text" id="post-backup-command" placeholder="e.g., rsync -av ~/edgecase/backups/ pi@raspberrypi.local:~/backups/">
-                <p class="field-help">Command to run after each backup, such as an rsync script for remote sync.</p>
+                <p class="field-help">Command to run after each backup, such as an rsync script for remote sync. Runs with your system user privileges.</p>
             </div>
         </div>
     </div>
