--- a/web/static/css/shared.css
+++ b/web/static/css/shared.css
@@ -1208,6 +1208,7 @@ input[type="number"] {
     font-weight: 600;
     display: inline-block;
     color: #374151;
+    cursor: default;
 }
 
 .type-badge-small {
